

CHANGES IN VERSION 0.2.1

NEW FEATURES
  - `select_greedy` has an `include_ties` option that will include multiple pairs
    for a record when these pairs have an equal weight/score.


CHANGES IN VERSION 0.2.0

NEW FEATURES:

  - `merge_pairs` combines two sets of pairs into one (like `rbind`). Expecially 
    usefull in combination with `pair_blocking` to generate pairs that are blocked
    on multiple keys (e.g. they have match on either `postcode` or `lastname`).

BUG FIXES:

  - `pairs_minsim` gave an error when the number of records squared is larger 
    the maximum integer value.

  - `pairs_minsim` did not generate pairs when one of the keys contained 
    missing values.
