@@ -44,7 +44,7 @@ export(match_n_to_m)
 export(merge_pairs)
 export(pair)
 export(pair_blocking)
-export(pair_minsim2)
+export(pair_minsim)
 export(problink_em)
 export(select_greedy)
 export(select_n_to_m)
