@@ -56,7 +56,7 @@
 #'
 #' @import data.table
 #' @export
-pair_minsim2 <- function(x, y, on, minsim = 0.0, on_blocking = character(0),
+pair_minsim <- function(x, y, on, minsim = 0.0, on_blocking = character(0),
     comparators = list(default_comparator), default_comparator = identical(), 
     keep_simsum = TRUE, deduplication = FALSE, add_xy = TRUE) {
   x <- as.data.table(x)
