@@ -1,7 +1,5 @@
 
-expect_equal <- function(x, y) {
-  stopifnot(isTRUE(all.equal(x, y)))
-}
+source("helpers.R")
 
 library(reclin2)
 
@@ -44,4 +42,45 @@ expect_equal(pairs$.y, c(1L, 3L, 2L, 4L, 1L, 3L, 4L, 2L, 3L, 4L))
 expect_equal(pairs$simsum, c(1, 1, 1, 1, 1, 2, 1, 1, 1, 2))
 
 
-stop("IMPLEMENT TESTS FOR ON_BLOCKING")
+# ===== ON_BLOCKING
+
+x <- data.table(a = c(1,1,2,2), b = c(1,2,1,2))
+y <- data.table(a = c(3,3,2,2), b = c(1,2,1,2))
+
+pairs <- pair_minsim(x, y, on = "a", on_blocking = "b")
+expect_equal(names(pairs), c(".x", ".y", "simsum"))
+expect_equal(pairs$.x, c(1,1,3,3,2,2,4,4))
+expect_equal(pairs$.y, c(1,3,1,3,2,4,2,4))
+expect_equal(pairs$simsum, c(0,0,0,1,0,0,0,1))
+expect_equal(attr(pairs, "x"), x)
+expect_equal(attr(pairs, "y"), y)
+
+# Unsing non-existent columns
+expect_error(pair_minsim(x, y, on = "a", on_blocking = "foo"))
+expect_error(pair_minsim(x, y, on = c("a", "foo"), on_blocking = "b"))
+
+pairs <- pair_minsim(x, y, on = "a", on_blocking = "b", minsim = 1)
+expect_equal(names(pairs), c(".x", ".y", "simsum"))
+expect_equal(pairs$.x, c(3,4))
+expect_equal(pairs$.y, c(3,4))
+expect_equal(pairs$simsum, c(1,1))
+expect_equal(attr(pairs, "x"), x)
+expect_equal(attr(pairs, "y"), y)
+
+pairs <- pair_minsim(x, y, on = "a", on_blocking = "b", minsim = 2)
+expect_equal(names(pairs), c(".x", ".y", "simsum"))
+expect_equal(nrow(pairs), 0)
+expect_equal(attr(pairs, "x"), x)
+expect_equal(attr(pairs, "y"), y)
+
+# Missing values
+x <- data.table(a = c(1,NA,2,2), b = c(1,2,1,2))
+y <- data.table(a = c(3,3,2,2), b = c(1,2,NA,2))
+pairs <- pair_minsim(x, y, on = "a", on_blocking = "b", minsim = 1)
+expect_equal(names(pairs), c(".x", ".y", "simsum"))
+expect_equal(pairs$.x, c(4))
+expect_equal(pairs$.y, c(4))
+expect_equal(pairs$simsum, c(1))
+expect_equal(attr(pairs, "x"), x)
+expect_equal(attr(pairs, "y"), y)
+
